crates/runtime/tests/search/snapshots/integration_models__search__duckdb-s3_vectors-dataset-hybrid_single_column_megascience_vector_search_sql_filtered_index_only.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer) WHERE subject != 'math' ORDER BY _score DESC, id LIMIT 4"
---
[
  {
    "id": 1015,
    "_score": 0.286
  },
  {
    "id": 821,
    "_score": 0.247
  },
  {
    "id": 449,
    "_score": 0.235
  },
  {
    "id": 1193,
    "_score": 0.205
  }
]
